--- a/docs/src/css/colors.css
+++ b/docs/src/css/colors.css
@@ -85,7 +85,8 @@
   /* Black & White palette, mainly for background settings */
   --swm-off-white: #f8f9ff;
   --swm-white: #fcfcff;
-  --swm-white-transparent: #fcfcff40;
+  --swm-white-transparent-light: #fcfcff40;
+  --swm-white-transparent-dark: #fcfcff80;
 
   --swm-light-off-navy: #30354a;
   --swm-off-navy: #272b3c;
